[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "links-notation"
version = "0.8.0"
description = "Python implementation of the Lino protocol parser"
readme = "README.md"
license = {text = "Unlicense"}
authors = [
    {name = "LinksPlatform", email = "noreply@linksplatform.com"}
]
keywords = ["lino", "parser", "links", "notation", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/linksplatform/Protocols.Lino"
Repository = "https://github.com/linksplatform/Protocols.Lino"
Issues = "https://github.com/linksplatform/Protocols.Lino/issues"

[tool.setuptools]
packages = ["links_notation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
