[package]
name = "platform-ln"
version = "0.7.0"
edition = "2021"
description = "Rust implementation of the Ln protocol parser"
license = "Unlicense"
repository = "https://github.com/linksplatform/Protocols.Ln"
keywords = ["ln", "parser", "links", "notation", "protocol"]
categories = ["parsing"]

[lib]
name = "ln"
path = "src/lib.rs"

[dependencies]
nom = "8.0"
