[package]
name = "links-notation"
version = "0.8.0"
edition = "2021"
description = "Rust implementation of the Lino protocol parser"
license = "Unlicense"
repository = "https://github.com/linksplatform/Protocols.Lino"
keywords = ["lino", "parser", "links", "notation", "protocol"]
categories = ["parsing"]

[lib]
name = "links_notation"
path = "src/lib.rs"

[dependencies]
nom = "8.0"
